[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ez-steg"
version = "0.1.0"
authors = [
    { name="Your Name", email="your.email@example.com" },
]
description = "A steganography tool for embedding and extracting data in images"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
]
dependencies = [
    "pillow>=9.0.0",
    "numpy>=1.20.0",
    "rich>=10.0.0",
    "cryptography>=41.0.0",
]

[project.urls]
"Homepage" = "https://github.com/a-bissell/ez-steg"

[project.scripts]
ez-steg = "ez_steg.ez_steg_interactive:main"

[tool.setuptools]
packages = ["ez_steg"] 